[CHI-103] Add center alignment support to alerts - fix small icon close issue

--- a/src/chi/components/alert/_banner.scss
+++ b/src/chi/components/alert/_banner.scss
@@ -16,6 +16,13 @@
         padding-bottom: 1.1875rem;
         padding-top: 0.75rem;
       }
+
+      & > .-close {
+        &.-small {
+          line-height: .75rem;
+          padding: .25rem
+        }
+      }
     }
   }
 }
