--- a/src/chi/components/alert/_bubble.scss
+++ b/src/chi/components/alert/_bubble.scss
@@ -10,6 +10,13 @@
         justify-content: space-between;
       }
 
+      & > .-close {
+        &.-small {
+          line-height: .75rem;
+          padding: .25rem
+        }
+      }
+
       &.-large {
         padding-bottom: 1.1875rem;
         padding-top: 0.75rem;
